# ohw-elf-firmware

./: .gitignore  Cargo.toml  build.rs  prj.conf
boards/: esp32c3_devkitm.overlay  native_sim.conf  native_sim.overlay  nrf52840_mdk.conf  overlay-entropy_not_secure.conf  overlay_benchmark.conf
doc/others/: temp.txt
src/: bluetooth.c  lib.rs  main.c  storage.c
src/display/: screen.c
