[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = ""
license = ""

[lib]
crate-type = ["staticlib"]

[patch.crates-io]

[dependencies]
zephyr = "^0.1.0"
bytes = { version = "1.10", default-features = false, features = ["extra-platforms"] }
anyhow = { version = "1.0", default-features = false }
ohw-wallets = { path = "./wallets", default-features = false, features = [
  "crypto-psa",
] }
heapless = { version = "0.8", default-features = false }
ohw-protocol = { path = "./protocol" }
portable-atomic = { version = "1.3", default-features = false, features = ["require-cas"] }

[build-dependencies]
zephyr-build = "^0.1.0"
cbindgen = "0.28.0"

[profile.release]
codegen-units = 1
strip = true
opt-level = 'z'
lto = "fat"
panic = 'abort'

[profile.dev]
panic = "abort"
